# CRC

./: .gitignore  .main.c.swp  CMakeLists.txt  Makefile  README.md  main.c  test.bat  test.sh
cmdl/: cmdl.c  cmdl.h
convert/: convert.c  convert.h
crc/: CMakeLists.txt  crc.c  crc.h  crc_table.c  crc_table.h
release/crc_v0.0.02_linux/: crc
tool/: crc_tool.c  crc_tool.h
